# pylint-pydantic-test

./: .pylintrc  Dockerfile  README.md  main.py  pyproject.toml
