[tool.poetry]
name = "pylint-pydantic-test"
version = "0.1.0"
description = ""
authors = ["Weijian Yang <cnweijiany@gmail.com>"]
readme = "README.md"
packages = [{include = "pylint_pydantic_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
pylint = "^2.17.4"
pylint-pydantic = "^0.1.8"
aws-cron-expression-validator = "^1.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
